# minesweeper_together

./: CMakeLists.txt  client.cpp  server.cpp
classes/: Board.h  Cell.h  Game.h  IGame.h  IPlayer.h  Move.h  SocketManager.h  View.h
